[Fixes #18264959] Properly aligned search shadowbox

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -295,9 +295,9 @@ input[type="text"], input[type="password"], textarea, select
     +border-radius(2px)
     background: image_url("icon_search.png") no-repeat 97% 7px
     border: 1px solid $primary_border3
-    float: right
+    float: left
     font-size: 12px
-    padding: 0 28px 0 5px
+    padding: 0 28px 0 0px
     width: 210px
     &:hover, &:focus
       background: image_url("icon_search2.png") no-repeat 97% 7px
